WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20525
QTMovieWin:dataSize() not implemented
https://bugs.webkit.org/show_bug.cgi?id=20525
Summary
QTMovieWin:dataSize() not implemented
Eric Carlson
Reported
2008-08-26 09:45:47 PDT
QTMovieWin::dataSize() always returns 1000, it should return the size of the movie data.
Attachments
proposed patch
(2.96 KB, patch)
2008-08-26 09:57 PDT
,
Eric Carlson
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2008-08-26 09:46:13 PDT
rdar://6169301
Eric Carlson
Comment 2
2008-08-26 09:57:47 PDT
Created
attachment 23002
[details]
proposed patch
Eric Carlson
Comment 3
2008-08-29 13:35:27 PDT
Committed revision
r35994
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug