        Reviewed by Adele.

Fix for https://bugs.webkit.org/show_bug.cgi?id=20525
        <rdar://problem/6169301>

        Return the size of the movie data instead of 1000. The value is used for the progress
        event "total" attribute.

       * media/progress-event-total-expected.txt: Added.
       * media/progress-event-total.html: Added.


Canonical link: https://commits.webkit.org/28397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35994 268f45cc-cd09-0410-ab3c-d52691b4dbfc